--- a/config/2025/config.json
+++ b/config/2025/config.json
@@ -65,8 +65,8 @@
         { "title": "Depot", "type": "boolean", "required": false, "code": "transDepot", "defaultValue": false },
         { "title": "Outpost", "type": "boolean", "required": false, "code": "transOutpost", "defaultValue": false },
         { "title": "Pass from Neutral Zone", "type": "counter", "required": false, "code": "transPassNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Crosses Bump", "type": "counter", "required": false, "code": "transCrossBump", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Crosses Trench", "type": "counter", "required": false, "code": "transCrossTrench", "defaultValue": 0, "min": 0, "step": 1 },
+        { "title": "Crosses Bump", "type": "boolean", "required": false, "code": "transCrossBump", "defaultValue": false },
+        { "title": "Crosses Trench", "type": "boolean", "required": false, "code": "transCrossTrench", "defaultValue": false },
         { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "transDefAlliance", "defaultValue": false },
         { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "transDefNeutral", "defaultValue": false }
       ]
@@ -76,8 +76,8 @@
       "fields": [
         { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "shiftHoppers", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Pass from Neutral Zone", "type": "counter", "required": false, "code": "shiftPassNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Crosses Bump", "type": "counter", "required": false, "code": "shiftCrossBump", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Crosses Trench", "type": "counter", "required": false, "code": "shiftCrossTrench", "defaultValue": 0, "min": 0, "step": 1 },
+        { "title": "Crosses Bump", "type": "boolean", "required": false, "code": "shiftCrossBump", "defaultValue": false },
+        { "title": "Crosses Trench", "type": "boolean", "required": false, "code": "shiftCrossTrench", "defaultValue": false },
         { "title": "Scores while Intaking", "type": "counter", "required": false, "code": "shiftCrossTrench", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "shiftDefAlliance", "defaultValue": false },
         { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "shiftDefNeutral", "defaultValue": false },
