--- a/config/2025/config.json
+++ b/config/2025/config.json
@@ -39,21 +39,21 @@
     {
       "name": "Autonomous",
       "fields": [
-        { "title": "Moved", "type": "boolean", "required": false, "code": "preload", "defaultValue": false },
+        { "title": "Moved", "type": "boolean", "required": false, "code": "moved", "defaultValue": false },
         { "title": "Score Preload", "type": "boolean", "required": false, "code": "preload", "defaultValue": false },
         { "title": "Depot", "type": "boolean", "required": false, "code": "autonDepot", "defaultValue": false },
         { "title": "Outpost", "type": "boolean", "required": false, "code": "autonOutpost", "defaultValue": false },
         { "title": "Collects from Neutral Zone", "type": "boolean", "required": false, "code": "collectNZ", "defaultValue": false },
         { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "autonHoppers", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Climb", "type": "boolean", "required": false, "code": "autonClimb", "defaultValue": false },
-        { 
+        {
           "title": "Climb Position",
           "type": "select",
           "required": false,
-          "code": "climbPos",
+          "code": "autonClimbPos",
           "defaultValue": "Center",
-          "choices": { "Outpost": "Outpost Side", "Center": "Center", "Depot": "Depot Side", "defaultvalue": false }
-        } ,
+          "choices": { "Outpost": "Outpost Side", "Center": "Center", "Depot": "Depot Side" }
+        },
         { "title": "Crossed Lanes", "type": "boolean", "required": false, "code": "autonCrossLanes", "defaultValue": false },
         { "title": "Won Auton?", "type": "boolean", "required": false, "code": "wonAuto", "defaultValue": false }
       ]
@@ -78,10 +78,10 @@
         { "title": "Pass from Neutral Zone", "type": "counter", "required": false, "code": "shiftPassNZ", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Crosses Bump", "type": "boolean", "required": false, "code": "shiftCrossBump", "defaultValue": false },
         { "title": "Crosses Trench", "type": "boolean", "required": false, "code": "shiftCrossTrench", "defaultValue": false },
-        { "title": "Scores while Intaking", "type": "counter", "required": false, "code": "shiftCrossTrench", "defaultValue": 0, "min": 0, "step": 1 },
+        { "title": "Scores while Intaking", "type": "counter", "required": false, "code": "shiftShootIntake", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "shiftDefAlliance", "defaultValue": false },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "shiftDefNeutral", "defaultValue": false },
-    ]
+        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "shiftDefNeutral", "defaultValue": false }
+      ]
     },
     {
       "name": "Endgame",
@@ -98,7 +98,7 @@
           "title": "Climb Position",
           "type": "select",
           "required": false,
-          "code": "climbPos",
+          "code": "endClimbPos",
           "defaultValue": "Center",
           "choices": { "Outpost": "Outpost Side", "Center": "Center", "Depot": "Depot Side" }
         }
@@ -123,10 +123,14 @@
           }
         },
         { "title": "Defensive Skill", "type": "range", "required": false, "code": "defSkill", "defaultValue": 3, "min": 1, "max": 5, "step": 1 },
-        { "title": "Scoring Accuracy", "type": "select", "required": false, "code": "accuracy",
-            "defaultValue": "M",
-            "choices": { "L": "Low", "M": "Medium", "H": "High" }
-},
+        {
+          "title": "Scoring Accuracy",
+          "type": "select",
+          "required": false,
+          "code": "accuracy",
+          "defaultValue": "M",
+          "choices": { "L": "Low", "M": "Medium", "H": "High" }
+        },
         { "title": "Passing Effectiveness", "type": "range", "required": false, "code": "passEffect", "defaultValue": 3, "min": 1, "max": 5, "step": 1 },
         { "title": "Defended?", "type": "boolean", "required": false, "code": "defended", "defaultValue": false },
         {
@@ -152,3 +156,4 @@
     }
   ]
 }
+
