--- a/config/2025/config.json
+++ b/config/2025/config.json
@@ -44,7 +44,7 @@
         { "title": "Depot", "type": "boolean", "required": false, "code": "autonDepot", "defaultValue": false },
         { "title": "Outpost", "type": "boolean", "required": false, "code": "autonOutpost", "defaultValue": false },
         { "title": "Collects from Neutral Zone", "type": "boolean", "required": false, "code": "collectNZ", "defaultValue": false },
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "autonHoppers", "defaultValue": 0, "min": 0, "step": 1 },
+        { "title": "Auton Hoppers Scored", "type": "counter", "required": false, "code": "autonHoppers", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Climb", "type": "boolean", "required": false, "code": "autonClimb", "defaultValue": false },
         {
           "title": "Climb Position",
@@ -61,11 +61,11 @@
     {
       "name": "Teleop",
       "fields": [
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "shiftHoppers", "defaultValue": 0, "min": 0, "step": 1 },
+        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "TeleopHoppers", "defaultValue": 0, "min": 0, "step": 1 },
+       { "title": "Scores while Intaking", "type": "counter", "required": false, "code": "ShootIntake", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Pass from Neutral Zone", "type": "counter", "required": false, "code": "shiftPassNZ", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Crosses Bump", "type": "boolean", "required": false, "code": "shiftCrossBump", "defaultValue": false },
         { "title": "Crosses Trench", "type": "boolean", "required": false, "code": "shiftCrossTrench", "defaultValue": false },
-        { "title": "Scores while Intaking", "type": "counter", "required": false, "code": "shiftShootIntake", "defaultValue": 0, "min": 0, "step": 1 },
         { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "shiftDefAlliance", "defaultValue": false },
         { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "shiftDefNeutral", "defaultValue": false }
       ]
